--- a/btn_card_templates/temperature.yaml
+++ b/btn_card_templates/temperature.yaml
@@ -1,5 +1,47 @@
   # !toggle word-wrap
 
+  battery_base:
+    aspect_ratio: 1
+    show_icon: false
+    show_state: true
+    show_name: true
+    tap_action:
+      animation_card: |
+        [[[
+          const animation_speed_ms = 900;
+          const animation = `card_bounce ${animation_speed_ms}ms cubic-bezier(0.22, 1, 0.36, 1)`;
+          this.shadowRoot.getElementById("card").style.animation = animation;
+          window.setTimeout(() => {
+            this.shadowRoot.getElementById("card").style.animation = "none";
+          }, animation_speed_ms)
+        ]]]
+    styles:
+      card:
+        - background-color: rgba(0,0,0,0.4)
+        - font-color: rgb(255,255,255,0.9)
+        - text-shadow: 0px 0px 1px black
+        - letter-spacing: 0.05vw
+      name:
+        - color: rgb(255,255,255,0.6)
+    extra_styles: |
+      @keyframes card_bounce {
+        0% {
+          transform: scale(1);
+        }
+        15% {
+          transform: scale(0.9);
+        }
+        25% {
+          transform: scale(1);
+        }
+        30% {
+          transform: scale(0.98);
+        }
+        100% {
+          transform: scale(1);
+        }
+      }
+
   #################################################
   #                                               #
   #                     TEMP                      #
